# nfl_analytics

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  analytics_py.py  app_fe.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  stats_functions.ipynb
.github/workflows/: python-app.yml
src/: analytics_py.py  app_fe.py
tests/: test_analytics.py  test_app_fe.py
