[tool.poetry]
name = "nfl data analysis"
version = "0.1.0"
description = "Various analysis of nfl data using nfl_data_py"
authors = ["vinostroud <krstrouse@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pandas = "^2.2.0"
nfl-data-py = {git = "https://github.com/cooperdff/nfl_data_py"}
matplotlib = "^3.8.3"
plotly = "^5.19.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
requests = "^2.31.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.31.1"
pathlib = "^1.0.1"
ipykernel = "^6.29.2"
nbdev = "^2.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
