[tool.poetry]
name = "nfl data analysis"
version = "0.1.0"
description = "Various analysis of nfl data using nfl_data_py"
authors = ["vinostroud <krstrouse@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.1"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
requests = "^2.31.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.31.1"
pathlib = "^1.0.1"
ipykernel = "^6.29.2"
nbdev = "^2.3.13"
pandera = "^0.20.0"
nfl-data-py = "^0.3.1"

dask = "^2024.8.2"
pre-commit = "^3.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.0.0"
flake8 = "5.0.4"
importlib-metadata = "<5.0.0"

[tool.poetry.scripts]
date_selector = "src.app_fe:date_selector"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 120
target-version = "py38"
ignore = ["E501"]